// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignupSubmit stage={'CONTINUE'}/> should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignupSubmit
    stage="CONTINUE"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeStyle": Object {},
      "children": "CONTINUE",
      "disabled": false,
      "inline": false,
      "loading": false,
      "onClick": [Function],
      "prefixCls": "am-button",
      "size": "large",
      "type": "primary",
    },
    "ref": null,
    "rendered": "CONTINUE",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeStyle": Object {},
        "children": "CONTINUE",
        "disabled": false,
        "inline": false,
        "loading": false,
        "onClick": [Function],
        "prefixCls": "am-button",
        "size": "large",
        "type": "primary",
      },
      "ref": null,
      "rendered": "CONTINUE",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`<SignupSubmit stage={'SIGN UP'}/> should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignupSubmit
    stage="SIGN UP"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeStyle": Object {},
      "children": "SIGN UP",
      "disabled": false,
      "inline": false,
      "loading": false,
      "onClick": [Function],
      "prefixCls": "am-button",
      "size": "large",
      "type": "primary",
    },
    "ref": null,
    "rendered": "SIGN UP",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeStyle": Object {},
        "children": "SIGN UP",
        "disabled": false,
        "inline": false,
        "loading": false,
        "onClick": [Function],
        "prefixCls": "am-button",
        "size": "large",
        "type": "primary",
      },
      "ref": null,
      "rendered": "SIGN UP",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
